--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p><b>What is the capital of India?</b></p>
+	<ul style="list-style-type:circle;">
+		<li>New Delhi</li>
+		<li>Mumbai</li>
+	</ul>
+	<blockquote city="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi. </blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
