--- a/main.html
+++ b/main.html
@@ -8,12 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<p><b>What is the capital of India?</b></p>
-	<ul style="list-style-type:circle;">
-		<li>New Delhi</li>
-		<li>Mumbai</li>
-	</ul>
-	<blockquote city="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi. </blockquote>
+	 <h3>What is the capital of India?</h3>
+    <form action=" https://en.wikipedia.org/wiki/New_Delhi ">
+          <input type="radio" id="html" name="fav_language" value="HTML">
+          <label for="html">New Delhi</label><br>
+          <input type="radio" id="css" name="fav_language" value="CSS">
+          <label for="css">Mumbai</label><br>
+
+        <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi"> New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
